--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@ InitTestScene*.unity*
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
 mysweetbakery/25Supercent/Library/
 mysweetbakery/Library/
+mysweetbakery/Temp/
